add css file and some fun

--- a/recipes/brandade.html
+++ b/recipes/brandade.html
@@ -1,4 +1,4 @@
-<h1>WMiam Miam Morue</h1>
+<h1>Miam Miam Morue</h1>
 <img src="../images/brandade.jpg" alt="brandade_well_presented">
 <h2>Description</h2>
 <p>
